name:                yaya-hedgehog
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Meddler
  build-depends:       base >= 4.7 && < 5
                     , top >= 0.1.0
  ghc-options:         -Wall
  default-language:    Haskell2010
