name:                yaya-optics
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sellout/yaya#readme
author:              Greg Pfeil
maintainer:          greg@technomadic.org
copyright:           2017 Greg Pfeil
category:            Recursion
build-type:          Simple
extra-source-files:  ../README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Yaya.Optics
                     , Yaya.Unsafe.Optics
  build-depends:       base >= 4.7 && < 5
                     , either
                     , lens
                     , yaya
                     , yaya-unsafe
  default-extensions:  RankNTypes
  default-language:    Haskell2010

test-suite yaya-optics-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , hedgehog
                     , yaya
                     , yaya-hedgehog
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sellout/yaya
