name:                yaya-unsafe-test
version:             0.1.1.2
synopsis:            Test suites for `yaya-unsafe`.
description:         This package should not be depended on by anything.
homepage:            https://github.com/sellout/yaya#readme
author:              Greg Pfeil
maintainer:          greg@technomadic.org
copyright:           2017 Greg Pfeil
license:             AGPL-3
license-file:        LICENSE
category:            Recursion
build-type:          Simple
cabal-version:       >=1.10

test-suite yaya-unsafe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  other-modules:       Test.Fold
  build-depends:       base >= 4.7 && < 5
                     , hedgehog
                     , yaya >= 0.1.0
                     , yaya-hedgehog >= 0.1.2
                     , yaya-unsafe >= 0.1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sellout/yaya
