name:                yaya-unsafe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sellout/yaya#readme
author:              Greg Pfeil
maintainer:          greg@technomadic.org
copyright:           2017 Greg Pfeil
category:            Recursion
build-type:          Simple
extra-source-files:  ../README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Yaya.Unsafe.Fold
                     , Yaya.Unsafe.Fold.Instances
                     , Yaya.Unsafe.Zoo
  build-depends:       base >= 4.7 && < 5
                     , bifunctors
                     , comonad
                     , either
                     , free
                     , lens
                     , yaya
  default-extensions:  ConstraintKinds
                     , DeriveTraversable
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , LambdaCase
                     , MultiParamTypeClasses
                     , RankNTypes
                     , ScopedTypeVariables
                     , TupleSections
  default-language:    Haskell2010

test-suite yaya-unsafe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  other-modules:       Test.Fold
  build-depends:       base
                     , hedgehog
                     , yaya
                     , yaya-hedgehog
                     , yaya-unsafe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sellout/yaya
