name:                yaya-unsafe
version:             0.1.1.2
synopsis:            Non-total extensions to the Yaya recursion scheme library.
description:         Yaya is designed as a _total_ library. However, it is often
                     expedient to use partial operations in some cases, and this
                     package extends Yaya to provide those operations. It’s in a
                     separate package (and modules) in order to make sure its
                     use is very intentional and also relatively obvious to
                     those reading your code. It’s recommended that you import
                     these modules qualified and, in particular, all the type
                     class instances here have been pulled into a separate
                     module to avoid accidentally bringing them into scope.
homepage:            https://github.com/sellout/yaya#readme
author:              Greg Pfeil
maintainer:          greg@technomadic.org
copyright:           2017 Greg Pfeil
license:             AGPL-3
license-file:        LICENSE
category:            Recursion
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Yaya.Unsafe.Fold
                     , Yaya.Unsafe.Fold.Instances
                     , Yaya.Unsafe.Zoo
  build-depends:       base >= 4.7 && < 5
                     , bifunctors
                     , comonad
                     , either
                     , free
                     , lens
                     , yaya >= 0.1.0
  default-extensions:  ConstraintKinds
                     , DeriveTraversable
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , LambdaCase
                     , MultiParamTypeClasses
                     , RankNTypes
                     , ScopedTypeVariables
                     , TupleSections
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sellout/yaya
